# tpchQ01_GPU

./: CMakeLists.txt  README.md
cpu/: CMakeLists.txt  common.cpp  common.hpp  kernel_x100.hpp  q1.cpp
cpu/kernels/: avx512.hpp  hyper.hpp  hyper_compact.hpp  naive.hpp  naive_compact.hpp  x100.hpp  x100_old.hpp
scripts/: bench.py  benchmark_with_optimal_params.py  nvprof_get_kernel_summary  try_grid_params.py
src/: common.hpp  constants.hpp  cpu.cpp  cpu.h  cpu.hpp  data_types.h  data_types.hpp  execute_q1.cu  execute_q1.hpp  file_access.hpp  main.cpp  main.cu  parse_cmdline.cpp  parse_cmdline.hpp  q1_params.hpp
src/expl_comp_strat/: tpch_kit.cpp
src/kernels/: ht_in_global_mem.cuh  ht_in_global_mem.hpp  ht_in_local_mem.cuh  ht_in_registers.cuh  ht_in_registers_per_thread.cuh  ht_in_shared_mem_per_bank.cuh  ht_in_shared_mem_per_block.cuh  ht_in_shared_mem_per_thread.cuh
src/monetdb_tpch_kit/: buffer.hpp  date.cpp  date.hpp  decimal.cpp  decimal.hpp  tpch_kit.cpp  tpch_kit.hpp
src/util/: atomics.cuh  blockingconcurrentqueue.hpp  extra_pointer_traits.hpp  file_access.hpp  helper.cpp  helper.hpp  monetdb_dates.hpp  preprocessor_shorthands.hpp  ptr_wrappers.hpp
